# Hangman

./: .gitignore  CMakeLists.txt  Hangman.sln  README.md  words.txt
Hangman/: Hangman.vcxproj  Hangman.vcxproj.filters  Main.cpp  Main.h  words.txt
hangman/include/: Util.h
hangman/src/: Util.cpp
